GNOME Bugzilla – Bug 683979
atk-adaptor: plug some refcount leaks
Last modified: 2012-09-13 20:40:15 UTC
See attached patch; I'm not sure how to get that specific code path executed, but I'm quite sure the patch is correct.
Created attachment 224249 [details] [review] atk-adaptor: plug some refcount leaks cache->add_traversal holds GObject references, so when we remove/pop items from it, we should also drop the reference, unless it's transfered to another queue.
Comment on attachment 224249 [details] [review] atk-adaptor: plug some refcount leaks Yeah, that patch looks correct. Thanks.
Attachment 224249 [details] pushed as d1e52eb - atk-adaptor: plug some refcount leaks