atk-adaptor: plug some refcount leaks

cache->add_traversal holds GObject references, so when we remove/pop
items from it, we should also drop the reference, unless it's transfered
to another queue.

https://bugzilla.gnome.org/show_bug.cgi?id=683979